# dom-content-extraction

./: .deny.toml  .gitignore  .gitleaks.toml  .llvm-cov  .tarpaulin.toml  .tmuxp.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  Makefile  README.md  codecov.yml  notes.org  prek.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  publish.yml  rust.yml
benches/: simple.rs
examples/: basic.rs  ce_score.rs  check.rs  check_pages.rs  debug_density.rs
html/: aaron-rodgers-completes-darkness-retreat-spt-intl.html  china-beating-us-nigerian-lithium-rush-race-go-electric.html  joe-root-unbeaten-as-england-bowlers-bring-new-zealand-to-its-knees.html  lorem_ipsum.html  sas-bankruptcy-protection.html  science-environment-64710225.html  test_1.html  test_2.html  test_3.html  test_4.html  test_windows1251.html
specs/: ctx.md  ideas.md  overview.md
src/: cetd.rs  density_tree.rs  lib.rs  main.rs  markdown.rs  tmp.rs  tree.rs  unicode.rs  utils.rs
tests/: e2e_article.rs  e2e_leaks.rs  encoding_test.rs
