[package]
name = "dom-content-extraction"
version = "0.3.14"

description = "Rust implementation of Content extraction via text density paper"
license = "MPL-2.0"
documentation = "https://docs.rs/dom-content-extraction/latest/dom_content_extraction/"
homepage = "https://github.com/oiwn/dom-content-extraction"
repository = "https://github.com/oiwn/dom-content-extraction"
readme = "README.md"
keywords = ["dom-text-density"]
categories = ["data-structures", "web-programming", "text-processing"]
exclude = [
    "tmp/*",
    "benches/*",
    "html/*",
    ".github/*",
    ".gitignore",
    ".tmuxp.yaml",
    ".amc.toml",
    "notes.org"
]

edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
ego-tree = "0.10"
scraper = "0.24"
thiserror = "2"
# binary
clap = { version = "4.5", features = ["derive"], optional = true }
tempfile = { version = "3.22", optional = true }
url = { version = "2.5", optional = true }
anyhow = { version = "1", optional = true }
unicode-normalization = "0.1"
unicode-segmentation = "1.12"
htmd = { version = "0.3", optional = true }
wreq-util = { version = "2.2", features = ["full"], optional = true }
wreq = { version = "5.3", features = ["full"], optional = true }
tokio = { version = "1.47", features = ["full"], optional = true }
encoding_rs = { version = "0.8", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"], optional = true }
tracing = { version = "0.1.41", optional = true }
chardetng = { version = "0.1.17", optional = true }

[dev-dependencies]
criterion = "0.7"
zip = "5"
anyhow = "1"
regex = "1"
rayon = "1"

[[bench]]
name = "simple"
harness = false

[lib]
doctest = false

[[bin]]
name = "dce"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "markdown"]
markdown = ["dep:htmd"]
cli = [
    "dep:clap",
    "dep:wreq",
    "dep:wreq-util",
    "dep:tokio",
    "dep:tempfile",
    "dep:url",
    "dep:anyhow",
    "dep:encoding_rs",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:chardetng"
]
