[package]
name = "dom-content-extraction"
version = "0.4.0"

description = "Rust implementation of Content extraction via text density paper"
license = "MPL-2.0"
documentation = "https://docs.rs/dom-content-extraction/latest/dom_content_extraction/"
homepage = "https://github.com/oiwn/dom-content-extraction"
repository = "https://github.com/oiwn/dom-content-extraction"
readme = "README.md"
keywords = ["dom-text-density"]
categories = ["data-structures", "web-programming", "text-processing"]
exclude = [
    "tmp/*",
    "benches/*",
    "html/*",
    ".github/*",
    ".gitignore",
    ".tmuxp.yaml",
    ".amc.toml",
    "notes.org"
]

edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
ego-tree = "0.11"
scraper = "0.26"
thiserror = "2.0"
# binary
clap = { version = "4.6", features = ["derive"], optional = true }
tempfile = { version = "3.27", optional = true }
url = { version = "2.5", optional = true }
anyhow = { version = "1.0", optional = true }
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
htmd = { version = "0.5", optional = true }
wreq-util = { version = "3.0.0-rc.10", optional = true }
wreq = { version = "6.0.0-rc.28", optional = true }
tokio = { version = "1.52", features = ["full"], optional = true }
encoding_rs = { version = "0.8", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing = { version = "0.1", optional = true }
chardetng = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.8"
zip = "8.5"
anyhow = "1.0"
regex = "1.12"
rayon = "1.12"
strsim = "0.11"

[[bench]]
name = "simple"
harness = false

[lib]
doctest = false

[[bin]]
name = "dce"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli", "markdown"]
markdown = ["dep:htmd"]
cli = [
    "dep:clap",
    "dep:wreq",
    "dep:wreq-util",
    "dep:tokio",
    "dep:tempfile",
    "dep:url",
    "dep:anyhow",
    "dep:encoding_rs",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:chardetng"
]
