[package]
name = "dom-content-extraction"
version = "0.4.1"

description = "Rust implementation of Content extraction via text density paper"
license = "MPL-2.0"
documentation = "https://docs.rs/dom-content-extraction/latest/dom_content_extraction/"
homepage = "https://github.com/oiwn/dom-content-extraction"
repository = "https://github.com/oiwn/dom-content-extraction"
readme = "README.md"
keywords = ["dom-text-density"]
categories = ["data-structures", "web-programming", "text-processing"]
exclude = [
    "tmp/*",
    "benches/*",
    "html/*",
    ".github/*",
    ".gitignore",
    ".tmuxp.yaml",
    ".amc.toml",
    "notes.org"
]

edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
ego-tree = "0.11"
scraper = "0.26"
thiserror = "2.0"
unicode-normalization = "0.1"
unicode-segmentation = "1.13"
htmd = { version = "0.5", optional = true }

[dev-dependencies]
chardetng = "1.0"
encoding_rs = "0.8"
criterion = "0.8"
zip = "8.5"
anyhow = "1.0"
regex = "1.12"
rayon = "1.12"
strsim = "0.11"

[[bench]]
name = "simple"
harness = false

[lib]
doctest = false

[features]
default = []
markdown = ["dep:htmd"]
